# ft-contract-grc20

./: .binpath  Cargo.toml  build.rs
io/: Cargo.toml
io/src/: lib.rs
src/: contract.rs  handler.rs  lib.rs
